crates/monochange/tests/snapshots/changelog_formats__app@defaults_then_package_override.snap
---
source: crates/monochange/tests/changelog_formats.rs
expression: app_changelog
---
# Changelog

All notable changes to this project will be documented in this file.

This changelog is managed by [monochange](https://github.com/monochange/monochange).

## 1.1.0 ([DATE])

### Changed

- No package-specific changes were recorded; `workflow-app` was updated to 1.1.0 as part of group `sdk`.
