crates/monochange/tests/snapshots/changelog_formats__core@defaults_keep_a.snap
---
source: crates/monochange/tests/changelog_formats.rs
expression: core_changelog
---
# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.1.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## 1.1.0 ([DATE])

### 🚀 Feature

#### add keep a changelog support
