crates/monochange/tests/snapshots/changelog_formats__group@defaults_then_package_override.snap
---
source: crates/monochange/tests/changelog_formats.rs
expression: group_changelog
---
# Changelog

All notable changes to this project will be documented in this file.

This changelog is managed by [monochange](https://github.com/monochange/monochange).

## 1.1.0 ([DATE])

Grouped release for `sdk`.
### 🚀 Feature

#### add keep a changelog support
_Packages:_ _core_
