crates/monochange/tests/snapshots/changelog_formats__release_uses_linked_keep_a_changelog_titles_without_double_wrapping.snap
---
source: crates/monochange/tests/changelog_formats.rs
expression: core_changelog
---
# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.1.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [1.1.0](https://github.com/ifiokjr/monochange/releases/tag/v1.1.0) (2026-04-06)

### Minor

#### render linked keep a changelog titles
